5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1734_2508.log
== TEST (2019-05-16 09:11:16) 
-- CODE:
n=float(input("digite um numero natural: "))
p=3
a=2
c=0
if(n==1):
	print(round(p, 8))

-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:15:47) 
-- CODE:
n=float(input("digite um numero natural: "))
p=3
a=2
c=0
if(n==1):
	print(round(p, 8))
else:
	while(cont<n-1):
		s=(-1)**c
		p=p+s*4/(a)*(a+1)*(a+2)
		c=c+1
		a=a+2
	print(round(p, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(cont<n-1):
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:16:17) 
-- CODE:
n=float(input("digite um numero natural: "))
p=3
a=2
c=0
if(n==1):
	print(round(p, 8))
else:
	while(c<n-1):
		s=(-1)**c
		p=p+s*4/(a)*(a+1)*(a+2)
		c=c+1
		a=a+2
	print(round(p, 8))
-- OUTPUT:
-10.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:17:18) 
-- CODE:
n=float(input("digite um numero natural: "))
p=3
a=2
c=0
if(n==1):
	print(round(p, 8))
else:
	while(c<n-1):
		s=(-1)**c
		p=p+s*4/((a)*(a+1)*(a+2))
		c=c+1
		a=a+2
	print(round(p, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 09:17:31) 
-- CODE:
n=float(input("digite um numero natural: "))
p=3
a=2
c=0
if(n==1):
	print(round(p, 8))
else:
	while(c<n-1):
		s=(-1)**c
		p=p+s*4/((a)*(a+1)*(a+2))
		c=c+1
		a=a+2
	print(round(p, 8))
-- EXECUTION TIME:
0.178057
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
